Solved issue of modal dialog open wrongly on small screens (ie mobile devices)

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -14,11 +14,6 @@
     padding: 0.2em 0;
 }
 
-.modal-dialog
-{
-    width: 700px; 
-} 
-
 /* Space out content a bit */
 body {
     padding-top: 20px;
